feat: change fz

--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,8 @@
     max-width: 800px;
     margin:0 auto;
     padding-top: 100px;
-    font-size:62px;
+    font-size:122px;
+
+    text-align: center;
 
 }
