--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,12 @@
 .wrapper {
 
-    max-width: 800px;
+    /* max-width: 800px; */
+    padding: 0 100px;
     margin:0 auto;
     padding-top: 100px;
-    font-size:122px;
+    font-size:142px;
 
     text-align: center;
+    text-transform: uppercase;
 
 }
