feat: add dayOfWeek

--- a/css/main.css
+++ b/css/main.css
@@ -24,9 +24,15 @@ body {
     line-height: 1;
 }
 
-#daytime {
+#daytime,
+#dayOfWeek {
     font-family: "Inter", sans-serif;
     font-size: 110px;
+}
+
+#dayOfWeek {
+    padding-top: 80px;
+    color: rgb(161, 3, 3);
 }
 
 .dark-mode {
